css/root-styles.css
/* ... */
.branding {
    padding: 10px 0 20px 0;
}

.branding p {
    color: #fff;
    position: relative;
    z-index: 6;
    text-align: center;
    text-decoration: none;
    line-height: 1.2em;
    margin: 0;
}

.branding a {
    color: var(--primary);
    text-decoration: none;
}

.branding a:hover {
    cursor: pointer;
    opacity: .5;
    text-decoration: none;
}

@media screen and (min-width: 600px) and (max-width: 1024px) {

    #contact {
        height: 250px;
    }

    .contact-group {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;

    }

    .contact-group h2 {
        margin-bottom: 30px;
        font-size: 1.5625em;
    }

    .contact-button {
        margin: 10px auto !important;
        font-size: 1.25em;
    }

    .footer-item {
        width: 250px;
    }

}

@media screen and (min-width: 1025px) {

    #contact {
        height: 210px;
    }

    .contact-group {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
            -ms-flex-direction: row;
                flex-direction: row;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
        -webkit-box-pack: justify;
            -ms-flex-pack: justify;
                justify-content: space-between;
        width: 730px;
    }

    .contact-group h2 {
        margin-bottom: 0;
        font-size: 2.0625em;
    }

    .contact-group button {
        height: 46px;
        width: auto;
        font-weight: 900;
        width: 200px;
        font-size: 1em;
        margin: 0;
    }

    footer {
        background-attachment: fixed;
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
            -ms-flex-pack: center;
                justify-content: center;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
            -ms-flex-direction: row;
                flex-direction: row;
    }

    .footer-content {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
            -ms-flex-direction: row;
                flex-direction: row;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
        -webkit-box-pack: justify;
            -ms-flex-pack: justify;
                justify-content: space-between;
        padding-top: 100px;
        width: 1100px;
        height: 320px;
    }

    .item-line {
        width: 100%;
        margin-bottom: 40px;
    }

    .footer-item img {
        margin: 0;
        margin-bottom: 50px;
        width: 300px;
        height: auto !important;
        position: absolute;
        top: -17px;
    }

    .footer-item p {
        width: 145px;
    }

    .first-p {
        padding-top: 42px;
        width: 285px !important;
    }

    .footer-item {
        height: 280px;
        width: auto;
        max-width: 190px;
        min-width: 190px;
        position: relative;
    }

    .footer-item:nth-child(2) {
        height: 280px;
        margin-top: 0;
    }

    .footer-item h3 {
        font-size: 1.125em;
        margin-bottom: 10px;
    }

    .footer-item a {
        display: block;
        float: left;
        margin-right: 100px;
        margin-bottom: 5px;
    }

    .address-icon {
        -webkit-transform: translateY(-20px);
            -ms-transform: translateY(-20px);
                transform: translateY(-20px);
    }
    
    .address-icon2 {
        -webkit-transform: translateY(-20px);
            -ms-transform: translateY(-20px);
                transform: translateY(-20px);
    }

    .rebar-link {
        width: 150px;
        margin-right: 30px;
    }

    .footer-item a:hover {
        color: var(--primary);
    }

    .footer-item:first-child {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
        max-width: 300px;
    }

    .footer-location-info p {
        width: 180px !important;
    }

    .footer-location-info p:first-child {
        font-weight: bold;
    }

    .location {
        -webkit-transform: translateX(-40px);
            -ms-transform: translateX(-40px);
                transform: translateX(-40px);
    }

    .footer-location {
        width: 180px;
    }

    .footer-location2 {
        width: 180px;
        margin: 0 !important;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-align: start;
            -ms-flex-align: start;
                align-items: flex-start;
        -webkit-box-pack: start;
            -ms-flex-pack: start;
                justify-content: flex-start;
        margin-bottom: 15px !important;
    }

    .valley-footer-icon i {
        width: 23px;
    }

    .branding-line {
        margin-bottom: 50px;
        margin-top: 30px;
    }

    .branding p {
        line-height: 1.7em;
    }

    .branding a {
        display: inline-block;
    }

    .branding a {
        display: inline-block;
    }
}

